force-app/main/default/objects/Demo_Inventory__c/Demo_Inventory__c.object-meta.xml
<CustomObject>
    <label>Demo Inventory</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Demo Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>