force-app/main/default/objects/Demo_Inventory__c/fields/Inventory_Number__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Number__c</fullName>
    <label>Inventory Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>