force-app/main/default/objects/Demo_Inventory__c/fields/Last_Sync_DT__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_DT__c</fullName>
    <label>Last Sync DT</label>
    <type>DateTime</type>
</CustomField>