force-app/main/default/objects/Demo_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Demo Inventory</relationshipLabel>
    <relationshipName>Demo_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>