force-app/main/default/objects/Demo_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Inventory_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Last_Sync_DT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>